--- a/postlogin.css
+++ b/postlogin.css
@@ -14,6 +14,17 @@ a{
   color:#ededed;
   background-color: transparent;
 }
+.thumbnail:hover{
+  width: 265px;
+
+}
+.headgrey{
+  color:grey;
+  font-size: small;
+}
+.thumbnail:img{
+  
+}
 a:hover{
   text-decoration: none;
 }
@@ -29,27 +40,10 @@ a:hover{
   color: #fff;
   margin-bottom: 40px;
 }
-.jumbotron{
-  margin-top: 30px;
-}
-.btn2:hover{
-  color:#000;
-  background-color: white;
-}
-hr{
-  width: 90%;
-}
-.caption{
-  text-align: center;
-}
-.headh1{
-  text-align: center;
-  font-size: 50px;
+.currentCategory{
+  color:  #bbe1fa;
   font-weight: bold;
-  font-family:serif;
-}
-.fa{
-  text-align: center;
+  text-decoration: underline;
 }
 .test_img {
   width: 30%;
@@ -170,9 +164,6 @@ hr{
 .nextAcc3{
   float: right;
 }
-.current{
-  color: #bbe1fa;
-}
 footer{
   background-color: rgb(0,0,0);
   color: white;
@@ -198,3 +189,78 @@ footer{
 /* .signuppage{
   text-align: center;
 } */
+.dropbtn {
+  background-color: rgba(0,0,0,0.7);
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  padding-right: 30px;
+  margin-top: 10px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color:#f1f1f1 ;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color:  #bbe1fa; }
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #000;}
+
+
+
+.dropright{
+  position: relative;
+  display: inline-block;
+
+}
+.dropright:hover>.dropdown-menu {
+ display: block;
+}
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color:#f1f1f1 ;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+
+}
+
+.dropdown-menu a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-menu a:hover {background-color:  #bbe1fa; }
+
+.dropright:hover .dropdown-menu {display: block;}
+
+.dropright:hover .btn-dark {background-color: #000;}
+
+.deals{
+  color:gray;
+  font-style: italic;
+}
